[package]
name = "aoc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc_utils"
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = "0.4"
scraper = "0.18"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
reqwest = "0.11"
tokio = "1.34"
regex = "1.10.2"
